--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -67,7 +67,7 @@
           </ion-card-header>
           <ion-card-content>
           
-            <label>Prix: {{ item.price }} </label>
+            <ion-label color="light">Prix: {{ item.price }} </ion-label>
             <!-- Autres informations sur l'article -->
           </ion-card-content>
         </ion-card>
@@ -87,7 +87,7 @@
           </ion-card-header>
           <ion-card-content>
           
-            <label color="light">Prix: {{ item.price }} </label>
+            <ion-label color="light">Prix: {{ item.price }} </ion-label>
             <!-- Autres informations sur l'article -->
           </ion-card-content>
         </ion-card>
