--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -39,6 +39,9 @@ align-content: center;
   border-radius: 50px 20px;
 
 }
+ion-card-content{
+  padding: 10px;
+}
 
 ion-card-header {
   width: 100%;
