--- a/src/app/details-cake/details-cake.page.html
+++ b/src/app/details-cake/details-cake.page.html
@@ -14,43 +14,56 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
 
-  <ion-card *ngIf="(activiteCake$ | async) as item">
-    <ion-img [src]="item.img"></ion-img>
-    <ion-card-header>
-      <ion-card-subtitle></ion-card-subtitle>
-      <ion-card-title>{{item.title}}</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      {{item.description}}
-      <div class="flexContent">
-        <ion-label>Prix :</ion-label>
-      <ion-chip>
-        <ion-icon name="pin" color="primary"></ion-icon>
-       
-        <ion-label>{{item.price}}</ion-label>
-      </ion-chip>
-
+  <ion-grid fixed *ngIf="(activiteCake$ | async) as item">
+    <ion-row>
+      <ion-col size="12" size-sm="12" size-md="12">
+      <div class="imgbox">
+    <img [src]="item.img" alt="" srcset="">
+    </div>
+  </ion-col>
+    </ion-row>
+  
+    <ion-row>
+      <ion-col size="4" size-sm="4" size-md="4">
+      <div class="cardText">
+        <ion-label>{{item.title}}</ion-label>
+  
       </div>
-      
-      <div class="btncard">
-        <ion-item>
-          <ion-button (click)="addPanier(item)" shape="round">
-            <ion-icon slot="start" name="basket"></ion-icon>
-            ajouter au panier
-          </ion-button>
-        </ion-item>
-        
-        <ion-item>
-         
-        </ion-item>
+    </ion-col>
+    </ion-row>
+  
+    <ion-row>
+      <ion-col size="12" size-sm="12" size-md="12">
+      <div class="decriptText">
+      <p>
+        {{item.description}}
+      </p>
       </div>
-    </ion-card-content>
+    </ion-col>
+    </ion-row>
+  
+    <ion-row>
+      <ion-col offset="6" offset-sm="6" offset-md="6">
+        <div class="totalprice">
+          <p>Prix </p>
+          <p> {{item.price}}</p>
+        </div>
+      </ion-col>
+    </ion-row>
+      <ion-row>
+        <ion-col size="12" size-sm="12" size-md="12">
+          <div class="cardbtn">
+            <ion-button  (click)="addPanier(item)"fill="outline" shape="round" color="warning">
+              <ion-icon slot="start" name="basket"></ion-icon>
+              add to card
+            </ion-button>
+        </div>
+        </ion-col>
     
-    
-
-  </ion-card>
+    </ion-row>
+  </ion-grid>
 
 
   <ion-modal [isOpen]="isModalOpen">
