--- a/src/app/details-pizza/details.page.html
+++ b/src/app/details-pizza/details.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>details</ion-title>
+    <ion-title>Details de l'article</ion-title>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="home">Home</ion-back-button>
     </ion-buttons>
@@ -15,66 +15,100 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
 
-  <ion-card *ngIf="(activitePizza$ | async) as item">
-    <ion-img [src]="item.img"></ion-img>
-    <ion-card-header>
-      <ion-card-subtitle></ion-card-subtitle>
-      <ion-card-title>{{item.title}}</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
+
+
+   <ion-grid fixed *ngIf="(activitePizza$ | async) as item">
+  <ion-row>
+    <ion-col size="12"  size-sm="12" size-md="12">
+    <div class="imgbox">
+  <img [src]="item.img" alt="" srcset="">
+  </div>
+</ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col size="4" size-sm="4" size-md="4">
+    <div class="cardText">
+      <ion-label>{{item.title}}</ion-label>
+
+    </div>
+  </ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col size="12"  size-sm="12" size-md="12">
+    <div class="decriptText">
+    <p>
       {{item.description}}
-      <div class="flexContent">
-        <ion-label>Prix :</ion-label>
-      <ion-chip>
-        <ion-icon name="pin" color="primary"></ion-icon>
-       
-        <ion-label>{{item.price}}</ion-label>
-      </ion-chip>
+    </p>
+    </div>
+  </ion-col>
+  </ion-row>
 
+  <ion-row>
+    <ion-col offset="6" offset-sm="6" offset-md="6">
+      <div class="totalprice">
+        <p>Prix </p>
+        <p> {{item.price}}</p>
       </div>
-      <div class="btncard">
-        <ion-item>
-        <ion-button (click)="addPanier(item)" shape="round">
-          <ion-icon slot="start" name="basket"></ion-icon>
-          ajouter au panier
-        </ion-button> 
-        </ion-item>
+    </ion-col>
+  </ion-row>
+    <ion-row>
+      <ion-col size="12" size-sm="12" size-md="12" >
+        <div class="cardbtn">
+          <ion-button  (click)="addPanier(item)"fill="outline" shape="round" color="warning">
+            <ion-icon slot="start" name="basket"></ion-icon>
+            add to card
+          </ion-button>
       </div>
-    </ion-card-content>
-    
-   </ion-card>
+      </ion-col>
+  
+  </ion-row>
+</ion-grid>
+   
 
    <ion-modal [isOpen]="isModalOpen">
     <ng-template>
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Mon Panier</ion-title>
-          <ion-buttons slot="end">
-            <ion-button (click)="setOpen(false)">Close</ion-button>
-          </ion-buttons>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content class="ion-padding">
-        <ion-item *ngFor="let article of CartItem ; let i=index" color="transparent">
-          <ion-thumbnail slot="start">
-            <img alt="Silhouette of mountains" [src]="article.item.img" />
-          </ion-thumbnail>
-          <ion-title>{{article.item.title}}
-         
-        <div class="flexitem">
-          <ion-label>{{article.item.price}}</ion-label>
-          <ion-chip>{{article.amount}}
-            <ion-button (click)="removeItem(article, i)">
-              <ion-icon slot="icon-only" name="remove"></ion-icon>
-            </ion-button>
-          </ion-chip>
-        </div>
-        </ion-title>
-        </ion-item>
-        
-      </ion-content>
+    
+
+      <ion-grid fixed class="ion-padding">
+        <ion-row *ngFor="let article of CartItem ; let i=index" color="transparent">
+          <ion-col size="3">
+            <div class="cardlogo">
+            <ion-avatar slot="start">
+              <img alt="Silhouette of mountains" [src]="article.item.img" />
+            </ion-avatar>
+          </div>
+          </ion-col>
+          <ion-col size="6">
+            
+
+          <ion-item>
+            <div class="cartTextItem">
+            <ion-label>
+              <h1 color="light">{{article.item.title}}</h1>
+              <p color="success">Qté : {{article.qty}}</p>
+              
+            </ion-label>
+          </div>
+          </ion-item>
+          </ion-col>
+          <ion-col size="3">
+            <div class="btndeletecard" align="center">
+            <ion-chip>
+             
+              <ion-button (click)="removeItem(article, i)">
+                <ion-icon slot="icon-only" name="remove"></ion-icon>
+              </ion-button>  
+           
+            </ion-chip>
+            <p align="center">Total : {{article.amount}}</p>
+          </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
     </ng-template>
   </ion-modal>
 </ion-content>
