--- a/src/app/details-pizza/details.page.scss
+++ b/src/app/details-pizza/details.page.scss
@@ -1,3 +1,11 @@
+.cartText{
+ion-title{
+  color: black;
+  /* padding: 10px; */
+  font-size: 2vh;
+}
+}
+
 .flexContent{
     display: flex;
     flex-direction: row;
@@ -19,14 +27,11 @@
     
 }
 
+
 ion-content{
-    --background: rgb(16,15,31) ;
-    .flexitem{
-      display: flex;
-      flex-direction: row;
-      width: 100%;
-      justify-content: space-between;
-      align-items: center;
+  --ion-background-color: radial-gradient(circle, #212020, #000000);
+ 
+  
       
     }
     ion-chip {
@@ -46,4 +51,66 @@ ion-content{
       --size: 140px;
       --border-radius: 14px;
     }
+  
+
+  .imgbox{
+    display: flex;
+    justify-content: center;
+    height: 42vh;
+  }
+  
+  .imgbox img{
+    
+    border-radius: 55px 142px;
+  } 
+  .cardText{
+    color: white;
+    font-size: 20px;
+    padding: 6px;
+    width: 100%;
+    font-weight: normal;
+  }
+  .decriptText{
+    width: 100%;
+    font-size: 15px;
+    padding-right: 26px;
+    color:white;
+    /* margin-bottom: -22px; */
+  }
+  .totalprice{
+    border: 2px solid #ffc409;
+    border-radius: 29px 5px;
+    background: #050505;
+    text-align: center;
+    color: white;
+    width: 10vh;
+    transform: translate(72px, 2px);
+    padding: 5px;
+  }
+  .cardbtn{
+    display: flex;
+    justify-content: center;
+    transform: translate(10px, 15px);
+    ion-button ion-icon{
+      border: 2px solid;
+      border-radius: 68px;
+    }
+  }
+
+  ion-modal{
+    --ion-background-color: radial-gradient(circle, #212020, #000000);
+   
+  
+  }
+  .btndeletecard{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .cartTextItem h1{
+    font-size: 3vh;
+    color: #ffc409;
+  }
+  .cartTextItem p{
+    color: #fbfbfb;
   }
