--- a/src/app/details-plat-africains/details-plat-africains.page.html
+++ b/src/app/details-plat-africains/details-plat-africains.page.html
@@ -71,7 +71,9 @@
   </ion-grid>
 
 
-   <ion-modal [isOpen]="isModalOpen">
+
+ 
+  <ion-modal [isOpen]="isModalOpen">
     <ng-template>
       <ion-header>
         <ion-toolbar>
@@ -81,25 +83,45 @@
           </ion-buttons>
         </ion-toolbar>
       </ion-header>
-      <ion-content class="ion-padding">
-        <ion-item *ngFor="let article of CartItem ; let i=index" color="transparent">
-          <ion-thumbnail slot="start">
-            <img alt="Silhouette of mountains" [src]="article.item.img" />
-          </ion-thumbnail>
-          <ion-title>{{article.item.title}}
-         
-        <div class="flexitem">
-          <ion-label>{{article.item.price}}</ion-label>
-          <ion-chip>{{article.amount}}
-            <ion-button (click)="removeItem(article, i)">
-              <ion-icon slot="icon-only" name="remove"></ion-icon>
-            </ion-button>
-          </ion-chip>
-        </div>
-        </ion-title>
-        </ion-item>
-        
-      </ion-content>
+<ion-content>
+
+      <ion-grid fixed class="ion-padding">
+        <ion-row *ngFor="let article of CartItem ; let i=index" color="transparent">
+          <ion-col size="3">
+            <div class="cardlogo">
+            <ion-avatar slot="start">
+              <img alt="Silhouette of mountains" [src]="article.item.img" />
+            </ion-avatar>
+          </div>
+          </ion-col>
+          <ion-col size="6">
+            
+
+          <ion-item>
+            <div class="cartTextItem">
+            <ion-label>
+              <h1 color="light">{{article.item.title}}</h1>
+              <p color="success">Qté : {{article.qty}}</p>
+              
+            </ion-label>
+          </div>
+          </ion-item>
+          </ion-col>
+          <ion-col size="3">
+            <div class="btndeletecard" align="center">
+            <ion-chip>
+             
+              <ion-button (click)="removeItem(article, i)">
+                <ion-icon slot="icon-only" name="remove"></ion-icon>
+              </ion-button>  
+           
+            </ion-chip>
+            <p align="center">Total : {{article.amount}}</p>
+          </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-content>
     </ng-template>
   </ion-modal>
 
