--- a/src/app/details-pizza/details.page.html
+++ b/src/app/details-pizza/details.page.html
@@ -71,7 +71,15 @@
 
    <ion-modal [isOpen]="isModalOpen">
     <ng-template>
-    
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Mon Panier</ion-title>
+          <ion-buttons slot="end">
+            <ion-button (click)="setOpen(false)">Close</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+<ion-content>
 
       <ion-grid fixed class="ion-padding">
         <ion-row *ngFor="let article of CartItem ; let i=index" color="transparent">
@@ -109,6 +117,7 @@
           </ion-col>
         </ion-row>
       </ion-grid>
+    </ion-content>
     </ng-template>
   </ion-modal>
 </ion-content>
