Adding screen slide on home page

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,32 @@
     </ion-toolbar>
   </ion-header>
 
-  
+  <ion-grid fixed class="ion-padding">
+    <ion-row>
+      <ion-col size="12">
+        <div class="swiperflex">
+        <swiper-container pagination="true" pagination-dynamic-bullets="true" zoom="true" 
+        space-between="30"
+    centered-slides="true" autoplay-delay="2500" autoplay-disable-on-interaction="false">
+          <swiper-slide>
+            <img src="../../assets/images.jpg" alt="">
+          </swiper-slide>
+          <swiper-slide>
+            <img src="../.././assets/images (2).jpg" alt="">
+          </swiper-slide>
+          <swiper-slide>
+            <img src="../../assets/download (1).jpg" alt="">
+          </swiper-slide>
+          <swiper-slide>
+            <img src="../../assets/download (3).jpg" alt="">
+          </swiper-slide>
+        </swiper-container>
+      </div>
+      </ion-col>
+      
+    </ion-row>
+  </ion-grid>
+
 <ion-grid fixed>
   <ion-row>
     <ion-col size="12">
