Adjusting design order interface

--- a/src/app/details-plat-africains/details-plat-africains.page.scss
+++ b/src/app/details-plat-africains/details-plat-africains.page.scss
@@ -97,7 +97,7 @@ ion-modal{
   align-items: center;
 }
 .cartTextItem h1{
-  font-size: 3vh;
+  font-size: 3.6vw;
   color: #ffc409;
 }
 .cartTextItem p{
