--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,7 +1,9 @@
 swiper-slide{
   text-align: center;
   font-size: 18px;
-  background: #fff;
+  background: #000000;
+  border: 2px solid #e0e0e0;
+  border-radius: 20px 5px;
   display: flex;
   justify-content: center;
   align-items: center;
