--- a/src/app/details-cake/details-cake.page.html
+++ b/src/app/details-cake/details-cake.page.html
@@ -71,7 +71,7 @@
         <ion-toolbar>
           <ion-title>Mon Panier</ion-title>
           <ion-buttons slot="end">
-            <ion-button (click)="setOpen(false)">Close</ion-button>
+            <ion-button (click)="setOpen(false)" color="light">retourner</ion-button>
           </ion-buttons>
         </ion-toolbar>
       </ion-header>
